--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en" data-theme="dark">
+<html lang="en" data-theme="light">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Assignment-11</title>
+  <link rel="shortcut icon" href="./src/assets/favicon-16x16.png" type="image/x-icon">
+  <title>GadgetHeaven</title>
 </head>
 
 <body>
